# bitTorrent

./: README.md
client/: README.txt  example.torrent  main.py  main_controller.py  peer.py  peer_connection_reader.py  pieces_map.py  tcp_server.py  torrent_file_creator.py  tracker_client.py
test/client1/: example.torrent  main_controller.py  peer.py  peer_connection_reader.py  tcp_server.py
test/client2/: config.py  file_object.py
test/client3/: README.txt  example.torrent  main_controller.py  peer_connection_reader.py
test/leecher1/: main.py  peer.py  tcp_connection.py
test/leecher2/: tcp_server.py  timer.py
test/seeder/: README.txt  main_controller.py  peer.py  peer_connection_reader.py
test/tracker/: MainController.cpp  Peer.h  TcpServer.cpp  TorrentSession.cpp  main.cpp
tracker/: CMakeLists.txt  Job.cpp  Job.h  MainController.h  Peer.cpp  README.txt  RequestController.cpp  RequestController.h  TcpServer.h  TorrentSession.h  config.h
